Updated the Readme.md with instructions on how to clone and run this application. Also separated the host and path for each service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
-url.inventory=
-url.auth=
+#inventory service details
+url.inventory.host=https://t12345.beta2.kibocommerce.com
+url.inventory.path=/kibo.inventory.webapi/commerce/inventory
 
+#auth service details
+url.auth.host=https://t12345.beta2.kibocommerce.com
+url.auth.path=/mozu.appdev.webapi
+
+#auth credentials
 auth.clientId=
 auth.clientSecret=
 
+#your settings
 client.tenantID=
 client.siteID=
-client.locationCode=
-client.upc=
