Using only one base path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-#inventory service details
-url.inventory.host=https://t12345.beta2.kibocommerce.com
+#basepath host url
+url.host=https://t12345.beta2.kibocommerce.com
+
+#inventory service url path
 url.inventory.path=/kibo.inventory.webapi/commerce/inventory
 
-#auth service details
-url.auth.host=https://t12345.beta2.kibocommerce.com
+#auth service url path
 url.auth.path=/mozu.appdev.webapi
 
 #auth credentials
