--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,16 @@
-url.inventory=
-url.auth=
+#basepath host url
+url.host=https://t12345.beta2.kibocommerce.com
 
+#inventory service url path
+url.inventory.path=/kibo.inventory.webapi/commerce/inventory
+
+#auth service url path
+url.auth.path=/mozu.appdev.webapi
+
+#auth credentials
 auth.clientId=
 auth.clientSecret=
 
+#your settings
 client.tenantID=
 client.siteID=
-client.locationCode=
-client.upc=
