Updated properties file to have separate host names.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-#basepath host url
-url.host=https://t12345.beta2.kibocommerce.com
+#inventory uri details
+url.inventory.host=https://t12345.beta2.kibocommerce.com
+url.inventory.path=/api/commerce/inventory
 
-#inventory service url path
-url.inventory.path=/kibo.inventory.webapi/commerce/inventory
-
-#auth service url path
-url.auth.path=/mozu.appdev.webapi
+#auth service url details
+url.auth.host=https://home.beta2.kibocommerce.com
+url.auth.path=/api
 
 #auth credentials
 auth.clientId=
